--- a/react-app/src/components/Channels/ChannelDetails.css
+++ b/react-app/src/components/Channels/ChannelDetails.css
@@ -1,6 +1,6 @@
 .channel-details-div {
     padding-top: 20px;
-    width: 580px;
+    width: min(580px, 100vw);
     max-width: 580px;
     height: min(85vh, 560px);
     background-color: white;
