--- a/react-app/src/components/Channels/ChannelModalHeader.css
+++ b/react-app/src/components/Channels/ChannelModalHeader.css
@@ -9,7 +9,6 @@
 
 .channel-modal-header-top {
     display: flex;
-    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
 }
